--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lucos_search_component",
   "version": "0.0.2",
   "description": "Web Component for searching lucOS data",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
