--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.10",
   "description": "Web Component for searching lucOS data",
   "type": "module",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "example": "source .env && KEY_LUCOS_ARACHNE=$KEY_LUCOS_ARACHNE envsubst < example/index.html > example/built.html && webpack -c example/webpack.config.js && open example/built.html"
+    "example": "source .env && KEY_LUCOS_ARACHNE=$KEY_LUCOS_ARACHNE envsubst < example/index.html > example/built.html && npm run build && webpack -c example/webpack.config.js && open example/built.html",
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
@@ -22,10 +23,10 @@
   },
   "homepage": "https://github.com/lucas42/lucos_search_component#readme",
   "devDependencies": {
-    "webpack-cli": "^6.0.1"
-  },
-  "dependencies": {
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "rollup": "^4.52.4",
+    "rollup-plugin-import-css": "^4.0.2",
     "tom-select": "^2.4.3",
-    "css-loader": "^7.1.2"
+    "webpack-cli": "^6.0.1"
   }
 }
