--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lucos_search_component",
-  "version": "1.0.11",
+  "version": "0.0.0-managed",
   "description": "Web Components for searching lucOS data",
   "type": "module",
   "main": "dist/index.js",
